# ProCSI-Modules

./: .gitignore  README.md
CalculatePi/: .gitignore  CMakeLists.txt  Makefile  pi-cuda-1.cu  pi-cuda-1.cuh  pi-cuda-openmp-rectangles.cpp  pi-cuda-unifiedMem.cu  pi-cudaUnifiedMemory-rectangles.cpp  pi-openmp-montecarlo.c  pi-openmp-rectangles.c  pi-openmp-rectangles2.c  pi-serial-montecarlo.c  pi-serial-rectangles.c  pi_integration.c  uniMem.cu
CalculatePi/other/: Makefile  pi-openmp-montecarlo.c  pi-openmp-rectangles2.c  pi-serial-montecarlo  pi-serial-montecarlo.c  pi-serial-rectangles.c
